Files uploading code completed